# demodsl

./: .coverage  .dockerignore  .gitignore  CONTRIBUTING.fr.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  action.yml  demo_full_blender_webinar.yaml  demo_site.yaml  demodsl.spec  example.yaml  prompt.md  pyproject.toml  review.md
.github/prompts/: terminal-demo.prompt.md
.github/workflows/: deploy-docs.yml  publish.yml  sync-skill-refs.yml  test.yml
blender/: render_device.py
blender/devices/: manifest.json
demodsl/: __init__.py  cli.py  commands.py  config_loader.py  engine.py  iframe_precheck.py  mailbox.py  models.py  oauth.py  page_precheck.py  stats.py  sub_recorder.py  validators.py
demodsl/discover/: __init__.py  _tokens.py  actions.py  benchmark.py  compare.py  controller.py  emotion.py  explore.py  graph.py  harness.py  llm.py  mind2web.py  observation.py  panel.py  persona.py  policy.py  pricing.py  review.py  reward.py  safety.py  search.py  synthesize.py  trajectory.py  verify.py
demodsl/effects/: _ffmpeg.py  anchor_resolver.py  avatar_overlay.py  browser_effects.py  cursor.py  expression.py  glow_select.py  js_builder.py  library_registry.py  library_resolver.py  os_background.py  popup_card.py  post_effects.py  react_renderer.py  registry.py  sanitize.py  subtitle.py  timeline_compositor.py
demodsl/models/: __init__.py  _base.py  audio.py  config.py  edit.py  effects.py  library.py  metadata.py  mobile.py  output.py  overlays.py  pipeline.py  rendering.py  scenario.py  terminal.py  timeline.py  video.py  voice.py
demodsl/orchestrators/: __init__.py  export.py  narration.py  post_processing.py  scenario.py
demodsl/pipeline/: run_cache.py  stages.py  workspace.py
demodsl/providers/: authenticated_browser.py  avatar.py  base.py  blender.py  blender_bridge.py  browser.py  deploy.py  ios_detect.py  mobile.py  remotion_bridge.py  remotion_render.py  render.py  selenium_browser.py  terminal.py  tts_cache.py  voice.py
docs/: next.config.js  package-lock.json  package.json
examples/: auth_login_helper.py  demo_ae_phase1_timeline.yaml  demo_ae_phase2_expressions.yaml  demo_ae_phase3_mattes.yaml  demo_ae_phase4_precomps.yaml  demo_ae_phase5_timeremap.yaml  demo_ae_phase6_text_animators.yaml  demo_ae_phase7_particles.yaml  demo_ae_phase8_camera_3d.yaml  demo_ae_phase9_tracking_data.yaml  demo_ae_saas_b2b.yaml  demo_all_actions_turbo.yaml  demo_all_effects_showcase.yaml  demo_all_effects_turbo.yaml  demo_all_os_features.yaml  demo_anchors_selectors.yaml  demo_app_full_tour.yaml  demo_app_oauth_tour.yaml  demo_auto_record_blocked.yaml  demo_avatar.yaml  demo_avatar_did.yaml  demo_avatar_image_url.yaml  demo_b2b_saas_full.yaml  demo_brand_styles_library.yaml  demo_browser_effects.yaml  demo_callouts.yaml  demo_camera_effects.yaml  demo_chrome_extension.yaml  demo_cinematic_render.yaml  demo_click.yaml  demo_cloud_deploy.yaml  demo_cursor.yaml  demo_cursor_trails.yaml  demo_dataviz.yaml  demo_demobro_showcase.yaml  demo_fun_effects.yaml  demo_glow_select.yaml  demo_glowfi.yaml  demo_intros_cta.yaml  demo_library_basic.yaml  (+78 more)
examples/data/: phase9_kpis.json
examples/debug_effects/: debug_bubbles.yaml  debug_callout_arrow.yaml  debug_confetti.yaml  debug_countdown_timer.yaml  debug_cursor_trail.yaml  debug_cursor_trail_comet.yaml  debug_cursor_trail_fire.yaml  debug_cursor_trail_glow.yaml  debug_cursor_trail_line.yaml  debug_cursor_trail_particles.yaml  debug_cursor_trail_rainbow.yaml  debug_emoji_rain.yaml  debug_fireworks.yaml  debug_frosted_glass.yaml  debug_glow.yaml  debug_highlight.yaml  debug_magnetic_hover.yaml  debug_matrix_rain.yaml  debug_morphing_background.yaml  debug_neon_glow.yaml  debug_party_popper.yaml  debug_progress_bar.yaml  debug_ripple.yaml  debug_shockwave.yaml  debug_snow.yaml  debug_sparkle.yaml  debug_spotlight.yaml  debug_star_burst.yaml  debug_success_checkmark.yaml  debug_text_highlight.yaml  debug_text_scramble.yaml  debug_tooltip_annotation.yaml  debug_typewriter.yaml
npm/: .npmignore  README.md  package.json
plugins/demodsl-blender/: .gitignore  pyproject.toml
plugins/demodsl-blender/demodsl_blender/: __init__.py  bridge.py  provider.py  stage.py
plugins/demodsl-blender/demodsl_blender/blender/: mesh_picker.py  render_device.py  test_screen_visible.py
plugins/demodsl-blender/demodsl_blender/blender/devices/: manifest.json
plugins/demodsl-blender/examples/: demo_depth_light.yaml  demo_parallax_scroll.yaml  demo_quick_3d_test.yaml  demo_scroll_cursor_3d.yaml  demo_site.yaml
plugins/demodsl-blender/scripts/: _preview_all.py  mesh_annotator.py  pick_screen.py
plugins/demodsl-blender/tests/: test_provider.py
remotion/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: benchmark_recording_quality.py  debug_effects_individual.py  generate_avatar_demos.py  generate_camera_demos.py  generate_effect_demos.py  generate_new_effect_demos.py  generate_perf_badge.py  generate_subtitle_demos.py  regenerate_all_doc_videos.sh  run_perf.sh  sync_skill_refs.py  test_effect_screenshot.py  test_effects_cv.py
snap/: snapcraft.yaml
tests/: conftest.py  e2e_authenticated_browser.py  e2e_youtubeur_login.py  test_anchor_resolver.py  test_authenticated_browser.py  test_avatar_provider.py  test_blender_provider.py  test_browser_effects.py  test_browser_provider.py  test_cli.py  test_commands.py  test_config_loader.py  test_cursor_overlay.py  test_deploy.py  test_discover.py  test_discover_compare.py  test_discover_explore.py  test_discover_graph.py  test_discover_mind2web.py  test_discover_persona.py  test_discover_pricing.py  test_discover_review.py  test_discover_reward.py  test_discover_safety.py  test_discover_sim_llm.py  test_effect_library.py  test_effects_integration.py  test_effects_registry.py  test_engine.py  test_exact_flow.py  test_export.py  test_export_orchestrator.py  test_expression.py  test_factories.py  test_glow_select_overlay.py  test_iframe_precheck.py  test_integration.py  test_mailbox.py  test_mobile_commands.py  test_mobile_models.py  (+40 more)
vscode-extension/: package.json
(+138 files in other folders)
