[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demodsl"
version = "2.7.0"
description = "DSL-driven automated product demo video generator"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [{ name = "Fran-cois", email = "francois@demodsl.dev" }]
readme = "README.md"
keywords = ["demo", "dsl", "video", "automation", "playwright", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0,<4.0",
    "pyyaml>=6.0,<7.0",
    "playwright>=1.40,<2.0",
    "moviepy>=1.0,<3.0",
    "pydub>=0.25,<1.0",
    "ffmpeg-python>=0.2,<1.0",
    "typer>=0.9,<2.0",
    "httpx>=0.25,<1.0",
    "Pillow>=10.0,<12.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
mobile = [
    "Appium-Python-Client>=4.0,<5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: end-to-end tests requiring example YAML files",
    "perf: performance benchmarks (run with '-m perf')",
]

[tool.coverage.run]
omit = ["demodsl/providers/avatar.py"]

[tool.coverage.report]
fail_under = 80
omit = ["demodsl/providers/avatar.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "docs",
    "chrome-extension",
    "vscode-extension",
    "npm",
    "output",
    "monitor_reports",
    "snap",
    "plugins",
    "remotion",
    "examples",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "C4",     # flake8-comprehensions
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "E402",   # module-level imports (allow guarded imports)
    "E731",   # lambda assignment (sometimes idiomatic)
    "E741",   # ambiguous variable names (allow l, I in math/draw code)
    "E712",   # equality with True/False (Pydantic patterns)
    "E722",   # bare except (legacy code, fix incrementally)
    "F401",   # unused imports (re-exports)
    "F403",   # star imports (re-exports)
    "F405",   # may be undefined from star imports
    "F811",   # redefinition (overloads)
    "F841",   # unused local (debugging-friendly)
    "UP007",  # legacy Optional[]
    "UP035",  # legacy typing imports
    "UP045",  # X | None
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM117", "F401", "F841"]
"demodsl/models.py" = ["F401", "F403"]  # backward-compat re-exports
"demodsl/models/__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.urls]
Homepage = "https://fran-cois.github.io/demodsl"
Repository = "https://github.com/Fran-cois/demodsl"
Documentation = "https://fran-cois.github.io/demodsl"
Issues = "https://github.com/Fran-cois/demodsl/issues"

[project.scripts]
demodsl = "demodsl.cli:app"
