[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demodsl-blender"
version = "0.1.0"
description = "Blender 3D device rendering plugin for DemoDSL"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [{ name = "Fran-cois", email = "francois@demodsl.dev" }]
keywords = ["demodsl", "blender", "3d", "device", "rendering", "plugin"]
dependencies = [
    "demodsl>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.entry-points."demodsl.stages"]
render_device_3d = "demodsl_blender.stage:RenderDevice3DStage"

[project.entry-points."demodsl.providers.blender"]
headless = "demodsl_blender.provider:HeadlessBlenderProvider"
